--- a/TestApp/Base.lproj/Main.storyboard
+++ b/TestApp/Base.lproj/Main.storyboard
@@ -175,13 +175,12 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Qe9-fe-0xB">
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Qe9-fe-0xB">
                                 <rect key="frame" x="0.0" y="20" width="375" height="44"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <color key="barTintColor" red="0.84705882349999995" green="0.84705882349999995" blue="0.84705882349999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <items>
-                                    <navigationItem title="Title" id="Smy-eg-w06">
+                                    <navigationItem title="Title" largeTitleDisplayMode="never" id="Smy-eg-w06">
                                         <barButtonItem key="leftBarButtonItem" title="back" image="back" id="xgm-2o-6b1">
                                             <connections>
                                                 <action selector="onBack:" destination="0bf-Yr-vbp" id="UF6-dF-MFg"/>
@@ -223,9 +222,11 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="testing_image" translatesAutoresizingMaskIntoConstraints="NO" id="HhP-O2-pnt">
-                                <rect key="frame" x="31" y="92" width="316" height="128"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="testing_image" translatesAutoresizingMaskIntoConstraints="NO" id="HhP-O2-pnt">
+                                <rect key="frame" x="31" y="92" width="300" height="127"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="127" id="Vjr-67-lUn"/>
+                                </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="loading" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oWL-Ku-XnU">
                                 <rect key="frame" x="172" y="253" width="175" height="21"/>
@@ -262,26 +263,33 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="arM-rA-3uR">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="arM-rA-3uR">
                                 <rect key="frame" x="0.0" y="599" width="375" height="48"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Views:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5Jf-1u-JZx">
-                                        <rect key="frame" x="30" y="14" width="50" height="21"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Views:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="5Jf-1u-JZx">
+                                        <rect key="frame" x="30" y="14" width="108" height="21"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="0" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="VE4-r7-LBs">
+                                    <textField opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="0" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="VE4-r7-LBs">
                                         <rect key="frame" x="156" y="8" width="97" height="30"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="97" id="gmQ-Hr-Tbx"/>
+                                        </constraints>
                                         <nil key="textColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
                                 </subviews>
                                 <color key="backgroundColor" red="0.84705882349999995" green="0.84705882349999995" blue="0.84705882349999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstItem="5Jf-1u-JZx" firstAttribute="top" secondItem="arM-rA-3uR" secondAttribute="top" constant="14" id="YGU-6z-XOJ"/>
+                                    <constraint firstAttribute="height" constant="48" id="m4k-DG-jwq"/>
+                                    <constraint firstItem="VE4-r7-LBs" firstAttribute="top" secondItem="arM-rA-3uR" secondAttribute="top" constant="8" id="tv3-6R-ayl"/>
+                                    <constraint firstAttribute="trailing" secondItem="VE4-r7-LBs" secondAttribute="trailing" constant="122" id="veM-O4-mDR"/>
+                                    <constraint firstAttribute="trailing" secondItem="5Jf-1u-JZx" secondAttribute="trailing" constant="237" id="xx5-0C-T0r"/>
+                                </constraints>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Abstract:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xeu-xr-B4b">
                                 <rect key="frame" x="31" y="541" width="71" height="21"/>
@@ -291,7 +299,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="loading" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="ftK-UE-ZT1">
-                                <rect key="frame" x="171" y="512" width="159" height="79"/>
+                                <rect key="frame" x="171" y="530" width="159" height="61"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
@@ -306,6 +314,17 @@
                             </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="arM-rA-3uR" firstAttribute="width" secondItem="qZs-Xc-jaC" secondAttribute="width" id="41s-gT-3d0"/>
+                            <constraint firstItem="7mr-N3-VWs" firstAttribute="trailing" secondItem="Qe9-fe-0xB" secondAttribute="trailing" id="AxA-ZT-o5A"/>
+                            <constraint firstItem="7mr-N3-VWs" firstAttribute="trailing" secondItem="HhP-O2-pnt" secondAttribute="trailing" constant="44" id="DT9-5A-3De"/>
+                            <constraint firstItem="7mr-N3-VWs" firstAttribute="bottom" secondItem="arM-rA-3uR" secondAttribute="bottom" constant="20" id="Dkd-KB-L21"/>
+                            <constraint firstItem="Qe9-fe-0xB" firstAttribute="top" secondItem="7mr-N3-VWs" secondAttribute="top" id="Ic5-iu-l9c"/>
+                            <constraint firstItem="7mr-N3-VWs" firstAttribute="trailing" secondItem="arM-rA-3uR" secondAttribute="trailing" id="Ubi-9x-Rta"/>
+                            <constraint firstItem="HhP-O2-pnt" firstAttribute="top" secondItem="Qe9-fe-0xB" secondAttribute="bottom" constant="28" id="fgU-FR-50h"/>
+                            <constraint firstItem="HhP-O2-pnt" firstAttribute="leading" secondItem="7mr-N3-VWs" secondAttribute="leading" constant="31" id="odT-x2-1aq"/>
+                            <constraint firstItem="Qe9-fe-0xB" firstAttribute="width" secondItem="qZs-Xc-jaC" secondAttribute="width" id="t1O-eR-pi5"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="7mr-N3-VWs"/>
                     </view>
                     <connections>
