--- a/TestApp/Views/ArticleTableViewCell.xib
+++ b/TestApp/Views/ArticleTableViewCell.xib
@@ -26,9 +26,8 @@
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Authors" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xvW-Vk-Ac4">
-                        <rect key="frame" x="16" y="50" width="280" height="21"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Authors" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="xvW-Vk-Ac4">
+                        <rect key="frame" x="16" y="33.5" width="280" height="18"/>
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
@@ -37,8 +36,11 @@
                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                 <constraints>
                     <constraint firstItem="pAm-Yk-pfo" firstAttribute="width" secondItem="H2p-sc-9uM" secondAttribute="width" id="4JF-kT-Rel"/>
+                    <constraint firstItem="xvW-Vk-Ac4" firstAttribute="top" secondItem="pAm-Yk-pfo" secondAttribute="bottom" constant="10" id="Lim-Jh-ugP"/>
                     <constraint firstItem="pAm-Yk-pfo" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="3" id="YjO-K4-yxI"/>
                     <constraint firstItem="pAm-Yk-pfo" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="drm-zl-u7D"/>
+                    <constraint firstAttribute="trailing" secondItem="xvW-Vk-Ac4" secondAttribute="trailing" constant="24" id="kbc-Dg-9xe"/>
+                    <constraint firstItem="xvW-Vk-Ac4" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="pFb-jy-RbP"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
